# Spotify_flask_app

./: .cache  .gitignore  COMPLETION_SUMMARY.md  FLASK_APP_README.md  QUICKSTART.md  README.md  README1.md  UPGRADE_SUMMARY.md  app.py  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  RATE_LIMITING.md
scripts/: fetch_playlists.py
src/spotify_scraper/: __init__.py  config.py
src/spotify_scraper/api/: __init__.py  client.py
src/spotify_scraper/database/: __init__.py  manager.py
src/spotify_scraper/utils/: __init__.py  export.py
static/: script.js  style.css
templates/: 404.html  500.html  base.html  dashboard.html  playlist_detail.html  playlists.html  tracks.html
